# led_matrix_monitoring

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  cleanup.sh  example_config.toml  flake.nix  led_matrix_monitoring.service  load.sh  rust-toolchain.toml
.cargo/: config.toml
src/: constants.rs  init.rs  main.rs
src/api/: mod.rs  uds.rs
src/cli/: mod.rs
src/collect/: collector.rs  data_point.rs  mod.rs  sensor_state.rs
src/config/: collector_config.rs  mod.rs
src/ext/: destructure_ext.rs  mod.rs
src/render/: mod.rs  renderer.rs  unit_interval.rs
